--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>Menu</title>
 </head>
 <body>
@@ -14,12 +17,20 @@
             </li>
             <li class="item">
                 <a href="#" class="link">Products +</a> 
-                <ul class="list-product clearfix">
+                <ul class="list-product">
                     <li class="item-product">
-                        <a href="#" class="link-product">Product 1</a>
+                        <a href="#" class="link-product">Product 1    +</a>
                     </li>
                     <li class="item-product">
-                        <a href="#" class="link-product">Product 2</a>
+                        <a href="#" class="link-product">Product 2   +</a>
+                        <ul class="list-sub">
+                            <li class="item-sub">
+                                <a href="#" class="link-sub">Sub Item</a>
+                            </li>
+                            <li class="item-sub">
+                                <a href="#" class="link-sub">Sub Item</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </li>
